--- a/jmartin6_OriginalHomeworkCode_03.Rmd
+++ b/jmartin6_OriginalHomeworkCode_03.Rmd
@@ -11,12 +11,13 @@ output:
 <div align="left">
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+library(curl)
 ```
 
 **Load Relevant Dataset**
 ```{R, Dataset}
-f <- "~/Documents/AN588-Fall2023/AN588_Zombies_jmartin6/AN588_Zombies_jmartin6"
+f <- curl("https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/master/AN588_Fall23/zombies.csv")
 ```
 
 ## Question #1
@@ -24,7 +25,7 @@ f <- "~/Documents/AN588-Fall2023/AN588_Zombies_jmartin6/AN588_Zombies_jmartin6"
 
 ```{R, Question 1}
 # Load the data from the CSV file
-f <- read.csv("zombies.csv")
+f <- read.csv(f)
 
 # Create a population SD function
 pop_sd <- function (data, mean) {
@@ -33,7 +34,7 @@ pop_sd <- function (data, mean) {
 # Generate the means and standard deviation for each variable
 mean_height <- mean(f$height)
 print(mean_height)
-(height_sd<-pop_sd(f$age, mean_height))
+(height_sd<-pop_sd(f$height, mean_height))
 mean_weight <- mean(f$weight)
 print(mean_weight)
 (weight_sd<-pop_sd(f$weight, mean_weight))
@@ -93,23 +94,21 @@ ggplot(f, aes(x = gender, y = years_of_education, fill = gender)) +
 **Use {ggplot} to make scatterplots of height and weight in relation to age. Do these variables seem to be related? In what way?**
 
 ```{R, Question 3}
-
-# Load the data from the CSV file
-f <- read.csv("zombies.csv")
-
 # Scatterplot of age vs. height
 ggplot(f, aes(x = age, y = height, color = age)) + #Add color
   geom_point() +
-  labs(title = "Scatterplot of Age vs. Height")+
+  labs(title = "Scatterplot of Age vs. Height") +
   theme(plot.title = element_text(hjust = 0.5)) + # Center the title
-  theme(legend.title.align=0.5) # Center the legend title
+  theme(legend.title = element_text(hjust = 0.5)) + # Center the legend title
+  geom_smooth(method = "lm", se = FALSE) # Add slope line
 
 # Scatterplot of age vs. weight
 ggplot(f, aes(x = age, y = weight, color = age)) +
   geom_point() +
   labs(title = "Scatterplot of Age vs. Weight")+
   theme(plot.title = element_text(hjust = 0.5)) +
-  theme(legend.title.align=0.5) 
+  theme(legend.title = element_text(hjust = 0.5)) + 
+  geom_smooth(method = "lm", se = FALSE)
 ```
 Yes! These variables appear to be related, as evidenced by the positive correlation in both scatterplots. As age increases, there is a corresponding increase in both height and weight. 
 
@@ -117,9 +116,6 @@ Yes! These variables appear to be related, as evidenced by the positive correlat
 **Using histograms and Q-Q plots, check whether the quantitative variables seem to be drawn from a normal distribution. Which seem to be and which do not (hint: not all are drawn from the normal distribution)? For those that are not normal, can you determine from which common distribution they are drawn?**
 
 ```{R, Question 4}
-# Load the data from the CSV file
-f <- read.csv("zombies.csv")
-
 # Input variables to create Q-Q plots
 variables_to_plot <- c("height", "weight", "zombies_killed", "years_of_education", "age")
 
@@ -132,9 +128,6 @@ for (variable_name in variables_to_plot) {
   qqline(f[[variable_name]], col = "steelblue1")
 }
 
-# Load the data from the CSV file
-data <- read.csv("zombies.csv")
-
 # Input variables to create histograms 
 variables_to_plot <- c("height", "weight", "age", "zombies_killed", "years_of_education")
 
@@ -146,10 +139,17 @@ for (variable_name in variables_to_plot) {
 
 }  
 ```
-Quantitative variables that seem to be drawn from a normal distribution include height, weight, and age. Quantitative variables that do not seem to be drawn from a normal distribution include number of zombies killed and years of education. Based on the Q-Q plots and histograms they both skew left and are drawn from a Poisson distribution. 
+Quantitative variables that seem to be drawn from a normal distribution include height, weight, and age. Quantitative variables that do not seem to be drawn from a normal distribution include number of zombies killed and years of education. Based on the Q-Q plots and histograms they both skew right and are drawn from a Poisson distribution. 
 
 ## Question #5
 **Now use the sample() function to sample ONE subset of 30 zombie survivors (without replacement) from this population and calculate the mean and sample standard deviation for each variable. Also estimate the standard error for each variable, and construct the 95% confidence interval for each mean. Note that for the variables that are not drawn from the normal distribution, you may need to base your estimate of the CIs on slightly different code than for the normal.**
+
+```{R, Question 5}
+library(dplyr)
+set.seed(100) # Set.seed so you get the same sample size 
+s <- sample_n(f, 30, replace=FALSE) # Use sample_n() to sample whole rows from a dataframe. Using sample() can only sample from one vector like f$height.
+head(s) # Take a peek at the sample
+```
 
 ```{R, Question 5 (Height)}
 s <- sample(f$height, size = 30, replace = FALSE) 
@@ -157,7 +157,7 @@ m <- mean(s)
 m
 sd <- sd(s)
 sd
-sem <- sd(s)/sqrt(length(s))
+sem <- sd(s)/sqrt(30)
 sem
 lower <- m - qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
 upper <- m + qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
@@ -171,7 +171,7 @@ m <- mean(s)
 m
 sd <- sd(s)
 sd
-sem <- sd(s)/sqrt(length(s))
+sem <- sd(s)/sqrt(30)
 sem
 lower <- m - qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
 upper <- m + qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
@@ -185,7 +185,7 @@ m <- mean(s)
 m
 sd <- sd(s)
 sd
-sem <- sd(s)/sqrt(length(s))
+sem <- sd(s)/sqrt(30)
 sem
 lower <- m - qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
 upper <- m + qnorm(1 - 0.05/2) * sem  # (1-alpha)/2 each in the upper and lower tails of the distribution
@@ -199,7 +199,7 @@ m <- mean(s)
 m
 sd <- sd(s)
 sd
-sem <- sd(s)/sqrt(length(s))
+sem <- sd(s)/sqrt(30)
 sem
 set <- NULL  # sets up a dummy variable to hold our 1000 simulations
 n <- 30 
@@ -220,15 +220,13 @@ m <- mean(s)
 m
 sd <- sd(s)
 sd
-sem <- sd(s)/sqrt(length(s))
+sem <- sd(s)/sqrt(30)
 sem
 set <- NULL  # sets up a dummy variable to hold our 1000 simulations
 n <- 30
-for (i in 1:100) {
+for (i in 1:1000) {
     set[i] <- mean(sample(s, n, replace = TRUE))
 }
-
-quantile(set)
 
 quantile(set, c(0.025, 0.975)) # Confidence Intervals by Bootstrapping
 
@@ -301,7 +299,7 @@ print (sd_years_of_education)
 hist(x, main = "Years of Education (100 samples)", xlab = "Years of Education", col = "royalblue4")
 ```
 
-The standard deviations of means is similar to the standard errors estimated in Question #5. The sampling distributions look normal, including for the previously non-normally distributed variables (i.e., zombies killed and years of education). Note: I believe that height, weight, and age follow a normal distribution, although there may be a subtle deviation (slightly skew right) when compared to the previous histograms.
+The standard deviations of means is similar to the standard errors estimated in Question #5. The sampling distributions look normal, including for the previously non-normally distributed variables (i.e., zombies killed and years of education). Note: I believe that height, weight, and age follow a normal distribution, although there may be a subtle deviation (slightly skew left) when compared to the previous histograms.
 
 ## Challenges: Homework #3
 
@@ -310,3 +308,27 @@ The standard deviations of means is similar to the standard errors estimated in 
 3. In Question #6, I found myself unsure about the necessary steps to complete this problem until I referred to Module 08 and noticed the example provided in the section titled "Sample Distributions versus Population Distributions."
 4. I often find myself making minor typos in my code. I should probably stop typing everything out and copy/paste more!
 5. So many good zombie related GIFs, videos, and photos, so hard to choose just one!
+
+##Peer Commentary
+
+#AM: I believe your method of loading a file only works with tab separated data(txt, or tsv). Also, this does not work on my computer because the path/location of the file is not the same and you're pulling it from your local storage. had to change this for it to work for me.
+
+#AM: I also used a function, but I only place the vector as my input and calculated the mean inside the function to make it easier and more efficient.
+
+#AM: There is an error here, you're pulling on the age vector to compute height_sd.
+
+#AM: I love the colors and the decoration. Mine is a bit boring right now because I wanted to make sure I had it write before I added more code or else I would get overwhelmed. But other than that I coded the same way!
+
+#AM: I'm not familiar with the method of loading the file the way you did, but I dont believe assigning "f <- read.csv(f)"  as the read csv s necesary for every new chunk(I deleted it because it was messing with my knit).
+
+#AM: I coded the samae way but made it in one line because its easier for me to reat, but when I add colors I'll probably need to separate the line like you did here. I said that there was not relationship between age and weight because I did not really see a significatn trend between the two variables.
+
+#AM: I agree with your conclusion! I did relatively the same thing, just without the for loop.
+
+#AM: Using sd finds the sample standard deviation, so you found the sample sd of the sample. Use you pop_sd.
+
+#AM: I like this way of doing it. I enjoyed making functions so much I made an entire function without using qqnorm to find ci, which was a lot of work :/
+
+#AM: You made different samples of each one, so none of the calculated data is related to each other. You only need to use the sample() function once, when you use it again you create a new sample of 30. Make a variable and set is to the sample function(s <-sample(. . .) and use the variable "s" for the mean/sd/sem). I think he also wanted us to use the pop_sd function we made here as well. I realized I did this problem wrong and should use a different CI for the data that is not normally distributed.
+
+#AM: A lot of our code is similar. I had issues with knitting your markdown document. It is tailored to your computer but not others. I had to make some minor adjustments I also make minor typos in my code! I have a bad habit of rewriting code which I should fix as well. Your code helped me a lot in figuring out how to change my code for the better. I realized I misread some of the questions and have to redo them. I like your use of par(mfrow), I always think it's cool to use to show figures in one viewing window. I also love your aesthetics for the tables, very nice shades of blue were used. Love your picture!
